2.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: votingapp-ingress
  annotations:
    #kubernetes.io/ingress.class: alb - Deprecated
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    #Make sure our SSL Cert and Cluster is in same AWS Account.
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-2:440744219836:certificate/5942929a-37c9-440b-a823-9878369d476b"
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - "vote.k8sb30.shop"
        - "result.k8sb30.shop"
        - "www.k8sb30.shop"
      secretName: my-tls-secret
  rules:
    - host: vote.k8sb30.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 80
    - host: result.k8sb30.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 80
    - host: www.k8sb30.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 80
