3.ingress-nk.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: votingapp-ingress-nk
  annotations:
    #kubernetes.io/ingress.class: alb - Deprecateds
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    #Make sure our SSL Cert and Cluster is in same AWS Account.
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-2:440744219836:certificate/63468fc6-b6e6-4eae-b3c0-4ebf5ce35671"
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - "k8sb30.shop"
      secretName: my-tls-secret-nk
  rules:
    - host: k8sb30.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 80
